--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,6 @@
 /* Estilos generales */
 
 body {
-    /* font-family: "Open Sans", sans-serif; */
     font-family: "Ubuntu", sans-serif;
     line-height: 1.6;
     margin: 0;
@@ -49,7 +48,7 @@ li {
 .aboutMe,
 .misTecFav,
 .misActFav {
-    background-color: var(--color1); /* Color de fondo */
+    background-color: var(--color1);
     margin: 20px 40px 40px;
     padding: 60px;
     border-radius: 8px;
@@ -67,7 +66,6 @@ li {
 
 .aboutMe{
     p{
-        /* color: #e7e5e5; */
         color: var(--color2);
         text-align: justify;
     }
@@ -102,7 +100,7 @@ li {
 }
     
 .formularioActividades {
-    background-color: var(--color2); /* Color de fondo */
+    background-color: var(--color2);
     padding: 50px 0px 40px 0px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -147,15 +145,14 @@ li {
 }
 
 #buttonAddActivity{  
-    background-color: var(--color1); /* Utiliza la variable de color */
+    background-color: var(--color1);
     color: white;
     opacity: 0.85;
     padding: 10px 20px;
-    /* border: none; */
-    border-radius: 25px; /* Aumenta el radio del borde para que sea más redondeado */
+    border-radius: 25px; 
     cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Agrega una sombra */
-    transition: all 0.3s ease; /* Agrega una transición suave al cambiar el color de fondo */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    transition: all 0.3s ease; 
     margin-top: 20px;
 }
 
@@ -167,15 +164,14 @@ li {
 
 /* Estilos para el contenedor de las tarjetas */
 .containerTarjetas {
-    width: 85%; /* Ancho del 85% de la pantalla */
+    width: 85%; 
     margin:40px auto; /* Centrar horizontalmente */
-    display: none; /* Utilizar flexbox para organizar las tarjetas */
-    flex-wrap: wrap; /* Permitir que las tarjetas se envuelvan a la siguiente fila */
-    justify-content: space-around; /* Espacio uniforme entre las tarjetas */
-    border: 1.75px dotted var(--color2); /* Borde sólido */
-    border-radius: 10px; /* Bordes redondeados */
-    padding: 50px; /* Espaciado interno */
-    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); Sombra suave */
+    display: none;
+    flex-wrap: wrap; 
+    justify-content: space-around; 
+    border: 1.75px dotted var(--color2);
+    border-radius: 10px; 
+    padding: 50px;
     background-color: var(--color1);
   }
 
@@ -184,12 +180,12 @@ li {
     padding: 20px;
     color: white;
     min-width: 20%;
-    max-width: 30%; /* Máximo ancho del 30% de la pantalla */
-    margin: 20px 10px; /* Centrar horizontalmente y agregar espacio entre tarjetas */
-    border-radius: 8px; /* Bordes redondeados */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    max-width: 30%; 
+    margin: 20px 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     overflow: hidden; /* Evitar que la sombra aumente el tamaño de la tarjeta */
-    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Animación de zoom y sombra */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
     background-color: var(--color3);
     height:fit-content;
     max-height: 450px;
@@ -200,7 +196,7 @@ li {
   .card h3 {
     font-size: 16px;
     font-weight: bold;
-    margin-bottom: 10px; /* Espacio debajo del título */
+    margin-bottom: 10px;
     text-align: center;
     font-size: 20px;
     font-weight: 600;
@@ -210,22 +206,22 @@ li {
   /* Estilos para el texto de la tarjeta */
   .card p {
     padding: 10px;
-    font-size: 16px; /* Tamaño de fuente */
-    line-height: 1.5; /* Altura de línea */
+    font-size: 16px;
+    line-height: 1.5; 
   }
   
   /* Estilos para la imagen de la tarjeta */
   .card img {
-    width: 100%; /* Ancho completo */
+    width: 100%;
     height: 250px;
-    border-radius: 8px 8px 0 0; /* Bordes redondeados en la parte superior */
+    border-radius: 10px 10px 0 0; /* Bordes redondeados en la parte superior */
     box-shadow: black 0px 4px 11px;
   }
   
   /* Estilos para el efecto de zoom al pasar el mouse */
   .card:hover {
-    transform: scale(1.02); /* Aumentar el tamaño al 105% */
-    box-shadow: 0 8px 16px var(--color2); /* Sombra con efecto de brillo */
+    transform: scale(1.02);
+    box-shadow: 0 8px 16px var(--color2);
   }
 
   .basureroTarjetas {
@@ -233,8 +229,8 @@ li {
     top: 5px;
     right: 15px;
     cursor: pointer;
-    color: var(--color1); /* Color de la cruz */
-    font-size: 20px; /* Tamaño del ícono */
+    color: var(--color1);
+    font-size: 20px;
     transition: transform .5s ease;
 }
 
